<resources>
    <string name="app_name">ChatKotlinApp</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="or_create_my_account">Or Create My Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>